# rust-aws-lambda-example

./: .gitignore  Cargo.toml  Makefile  samconfig.toml  template.yml
src/: article.rs  like.rs  subscribe.rs
